attempt to fix overflow-x problem on the mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
 	font-family: "Quicksand", sans-serif;
 	font-weight: 500;
 	font-size: 16px;
-	overflow-x: hidden;
+	overflow-x: hidden !important;
 }
 
 img {
@@ -93,10 +93,6 @@ a {
 	display: block;
 }
 
-.services {
-	padding: 3.5em 0;
-}
-
 .footer {
 	padding: 2.5em 0;
 	display: block;
@@ -107,8 +103,7 @@ a {
 .printing__title,
 .gadgets__title,
 .clothing__title,
-.contact__title,
-.services__title {
+.contact__title {
 	font-size: 1.75rem;
 	font-weight: 700;
 	padding-bottom: 0.75em;
@@ -511,8 +506,8 @@ button {
 
 .offer__text,
 .big-number__text {
-	font-size: 2rem;
-	font-weight: bold;
+	font-size: 1.75rem;
+	font-weight: 700;
 	text-transform: uppercase;
 	padding: 0 0 1em;
 	transition: 0.3s ease-in-out;
@@ -558,6 +553,8 @@ button {
 .about-us__img {
 	height: 150px;
 	width: 150px;
+	/* padding: 0.5rem 1.5rem; */
+	/* margin: 1rem 0; */
 	padding: 0.5rem 1.5rem;
 	margin: 1rem 0;
 }
@@ -706,117 +703,6 @@ button {
 .clothing__logo:hover {
 	transform: scale(1.2);
 	opacity: 1;
-}
-
-/* ----------------------------- */
-/*      services  section       */
-/* ----------------------------- */
-
-.services-section {
-	background-color: var(--red-light);
-	color: var(--white-light);
-	box-shadow: -10px 0 10px 0 rgba(0, 0, 0, 0.5);
-}
-/* cards - services */
-
-.services {
-	position: relative;
-	align-items: center;
-	justify-content: space-evenly;
-	width: 100%;
-	gap: 1em;
-	flex-wrap: wrap;
-	padding: 2em 0 4em;
-}
-
-.services__title {
-	text-align: left;
-	margin-top: 0;
-	padding: 2em 0 0.5em;
-}
-
-.card {
-	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	/* width: 350px; */
-	/* min-width: 350px; */
-	/* width: clamp(350px, 80vw, 450px); */
-	width: clamp(100px, 80vw, 250px);
-	height: 300px;
-	border-radius: 5px;
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-	transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-	overflow: hidden;
-}
-
-.card:hover {
-	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
-}
-.card:hover .card__title {
-	opacity: 0;
-	transform: scale(0.7);
-}
-.card:hover img {
-	transform: scale(1.25);
-}
-.card:hover figcaption {
-	bottom: 0;
-}
-.card .card__title {
-	position: absolute;
-	top: 1rem;
-	left: 1rem;
-	margin: 0;
-	padding: 0;
-	color: var(--white-light);
-	font-size: 2rem;
-	text-shadow: var(--black-dark) 2px 2px 2px;
-	font-weight: 500;
-	letter-spacing: 0.15rem;
-	line-height: 1;
-	opacity: 1;
-	transform: scale(1);
-	transition: 0.3s ease;
-	z-index: 2;
-}
-
-.card img {
-	height: 100%;
-	transition: 0.5s;
-}
-
-.card__img--full {
-	width: 100%;
-	height: auto;
-}
-
-.card figcaption {
-	position: absolute;
-	bottom: -290px;
-	left: 0;
-	width: 100%;
-	margin: 0;
-	padding: 2rem;
-	background-color: rgba(0, 0, 0, 0.85);
-	box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
-	color: var(--white-light);
-	line-height: 1;
-	transition: 0.5s;
-}
-.card figcaption .card__more-info {
-	margin: 0 0 2em;
-	padding: 0;
-}
-.card figcaption .card__text {
-	font-size: 1rem;
-	line-height: 1.25;
-	padding: 0.5em 0;
-}
-
-.card figcaption .card__text:last-of-type {
-	padding-bottom: 0;
 }
 
 /* ---------------------------- */
@@ -1054,13 +940,12 @@ button {
 	.printing__title,
 	.gadgets__title,
 	.clothing__title,
-	.contact__title,
-	.services__title {
+	.contact__title {
 		font-size: 1.5rem;
 	}
 
 	.hero__title {
-		font-size: 2.5rem;
+		font-size: 2rem;
 	}
 
 	.hero__text-box {
@@ -1085,10 +970,6 @@ button {
 	}
 
 	.about-us__title {
-		padding-top: 1em;
-	}
-
-	.about-us__title--first {
 		padding-top: 0;
 	}
 
@@ -1101,8 +982,8 @@ button {
 	}
 
 	.big-numbers__bg {
-		background-position-x: -250px;
-		background-position-y: 2rem;
+		background-position-x: -300px;
+		/* background-position-y: 50px; */
 	}
 
 	.title--desktop {
@@ -1146,6 +1027,13 @@ button {
 		margin-bottom: 3em;
 	}
 }
+
+@media screen and (max-width: 500px) {
+	.hero__title {
+		font-size: 1.75rem;
+	}
+}
+
 /* ============= */
 /* == desktop == */
 /* ============= */
